# rootphi

./: LICENSE  README.md  pyproject.toml
rootphi/: __init__.py  core.py
tests/: test_rootphi.py
