# Directory structure:
# rootphi/
# ├── rootphi/
# │   ├── __init__.py
# │   └── core.py  # contains the full rootphi implementation
# ├── README.md
# ├── pyproject.toml
# └── LICENSE

# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rootphi"
version = "1.0.0"
description = "Symbolic arithmetic in Q(phi, sqrt(phi)) using exact rational combinations"
authors = [
  { name="Chittaranjan Pardeshi", email="chitta.pardeshi@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Science/Research"
]

[tool.setuptools.packages.find]
where = ["rootphi"]
